--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       
           
       <div class="description-product">
-        <h2 class="category">Perfume</h2>
+        <p class="category">Perfume</p>
         <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
         <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.</p>
-        <h3 class="current-price">$149.99 <sup class="before-price">$169.99</sup></h3>
+        <h2 class="current-price">$149.99 <sup class="before-price">$169.99</sup></h2>
         <button class="button">
           <img src="./images/icon-cart.svg" alt="add">
           Add to Cart
@@ -39,9 +39,12 @@
     </div>    
   </main>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Roraima Lugo</a>.
-  </div>
+  
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Roraima Lugo</a>.
+    </div>
+  </footer>  
 </body>
 </html>
